--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,12 @@
       "128": "assets/icon.png"
     }
   },
+  "content_scripts": [
+    {
+      "js": ["scripts/content.js"],
+      "matches": ["*://*/*"]
+    }
+  ],
   "icons": {
     "16": "assets/icon.png",
     "48": "assets/icon.png",
