--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,11 @@
   "name": "Speak Text",
   "version": "1.0",
   "description": "If you need to hear the text on a page, select the text and this extension will read it to you.",
-  "permissions": ["tts", "activeTab", "scripting"],
+  "permissions": ["storage", "activeTab", "scripting"],
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": true
+  },
   "background": {
     "service_worker": "scripts/background.js"
   },
