--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Speak Text",
   "version": "1.0",
   "description": "If you need to hear the text on a page, select the text and this extension will read it to you.",
-  "permissions": ["storage", "activeTab", "scripting"],
+  "permissions": ["storage", "activeTab", "scripting", "contextMenus"],
   "options_ui": {
     "page": "options.html",
     "open_in_tab": true
@@ -21,8 +21,9 @@
   },
   "content_scripts": [
     {
+      "matches": ["<all_urls>"],
       "js": ["scripts/content.js"],
-      "matches": ["*://*/*"]
+      "run_at": "document_end"
     }
   ],
   "icons": {
